# scptui

./: .gitignore  Makefile  README.md  ls_times.py  pyproject.toml
scpi/: __init__.py  main.py  ssh_client.py  ui.py
scptui/: main.py  ssh_client.py  ui.py
